--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,28 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Environment variables / secrets
+.env
+.env.*
+!example.env
+
+# Database files (local dev only)
+*.db
+*.sqlite3
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Docker
+*.pid
+*.seed
+*.pid.lock
+docker-compose.override.yml
+
+# Mac / Windows stuff
+.DS_Store
+Thumbs.db
